tests/ui/lint/snapshots/fix_double_int_negation.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let x = 5;
  let _ = --x
}
=== fixed ===
fn main() {
  let x = 5;
  let _ = x
}
