tests/ui/lint/snapshots/fix_eager_split_in_loop_keeps_type_argument.snap
---
source: tests/ui/lint/fixes.rs
---
import "go:strings"

pub fn count(s: string) -> int {
  let mut n = 0
  for part in strings.Split<int>(s, ",") {
    n += part.length()
  }
  n
}
=== fixed ===
import "go:strings"

pub fn count(s: string) -> int {
  let mut n = 0
  for part in strings.SplitSeq<int>(s, ",") {
    n += part.length()
  }
  n
}
