tests/ui/lint/snapshots/fix_excess_parens_on_condition.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let x = 5;
  if (x > 0) {
    let _ = x;
  }
}
=== fixed ===
fn main() {
  let x = 5;
  if x > 0 {
    let _ = x;
  }
}
