tests/ui/lint/snapshots/fix_expression_only_fstring.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let name = "world"
  let _ = f"{name}"
}
=== fixed ===
fn main() {
  let name = "world"
  let _ = name
}
