tests/ui/lint/snapshots/fix_expression_only_fstring_parenthesizes_binary.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let a = "x"
  let b = "y"
  let _ = f"{a + b}".length()
}
=== fixed ===
fn main() {
  let a = "x"
  let b = "y"
  let _ = (a + b).length()
}
