tests/ui/lint/snapshots/fix_let_and_return.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f() -> int {
  let x = compute()
  x
}

fn compute() -> int { 42 }
=== fixed ===
pub fn f() -> int {
  compute()
}

fn compute() -> int { 42 }
