tests/ui/lint/snapshots/fix_manual_compound_assignment.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let mut x = 5;
  x = x + 1;
  let _ = x
}
=== fixed ===
fn main() {
  let mut x = 5;
  x += 1;
  let _ = x
}
